tests/typing/should_fail/constructors_same_signature.java
package tutu.titi.toto;

class A {

    A(int i){}

    A(int j){}
}
